tests/errors/assign-check/missing.fil
comp main<G: 1>() -> () {
    bundle a[4]: [G, G+1] 32;
    a{0} = a{1};
}